# data1300-oblig2-health-app

./: .gitignore  README.md  pyproject.toml
.github/workflows/: classroom.yml
src/health_app/: data.py  health.py  health_records.json  main.py
src/health_app.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_data.py  test_health.py
